--- a/admin/verslag/verslag.html
+++ b/admin/verslag/verslag.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans">-->
-	<!--<link rel="stylesheet" type="text/css" href="../style/admin.css">-->
-	<!-- <script src="https://aliconnect.nl/api/js/config"></script> -->
-	<script src="/api/js/aim_debug.js"></script>
-	<!-- <script src="/api/js/web.js"></script> -->
+  <script src="https://aliconnect.nl/sdk@0.0.9/src/js/aim.js"></script>
+  <script src="https://aliconnect.nl/sdk@0.0.9/src/js/web.js"></script>
 	<script src="js/verslag.js"></script>
 	<link href="admin.css" rel="stylesheet" />
 </head>
-<body>
-
-
-</body>
+<body></body>
 </html>
